# SoftUni-Web-Applications-with-Flask

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt  setup.cfg
01. Resources/: 00. Web-Applications-wit-Flask-Course-Introduction.pptx
02. Intro to Web and Flask Framework/: 01. Intro-to-Web-and-Flask-Framework.pptx
03. SQLAlchemy, Postgres, and Migrations in Flask/: 02. Database-Basics-Additional-Resource.pptx  02. Working-with-Database.docx  02. Working-with-Database.pptx  get_reader.sh  get_reader_books.sh  post_book.sh  post_reader.sh  resources.txt
04. Schemas, Validation, and Password Hashing/: 03.Schemas-Validation-and-Password-Hashing-Lab.docx  03.Schemas-Validation-and-Password-Hashing.pptx  get_user.sh  post_user.sh  todo.md
05. Authentication, Authorization and JWT/: 04.Authentication-Authorization-and-JWT-Lab.docx  04.Authentication-Authorization-and-JWT.pptx  AdditionalResources.docx  login.sh  signup.sh
05. Authentication, Authorization and JWT/alembic/: env.py
06. Clean Code - Demo App - Part 1/: 05.Clean-Code-Demo-App-Part-1.docx  05.Clean-Code-Demo-App-Part-1.pptx  create.sh  list.sh  login.sh  requirements.txt  signup.sh  user_info.sh
08. Working with Third Parties (Wise)/: 07.Working-with-3rd-Parties-Part-1-Wise.docx  07.Working-with-3rd-Parties.pptx
09. Working with Third Parties (AWS) + Front-End/: 08.Working-with-3rd-Parties-Part-2-AWS.docx
10. Unit Testing - Part 1/: 09.Unit-Testing-Part-1.docx  09.Unit-Testing-Part-1.pptx
12. Project Defense - Regular Exam/: Web-Applications-with-Flask-Project-Requirements.docx
(+38 files in other folders)
