[metadata]
name = package_name
version = 0.1.0
url = http://example.com
author = <author name>
author_email = <author email>
license = <licence>

[options]
packages = find:
package_dir = 
	= .
include_package_data = True
install_requires =
zip_safe = True

[options.packages.find]
exclude = 
	tests
	utils

[options.package_data]

[options.entry_points]

